added ghost movable to preview placement

--- a/web/index.html
+++ b/web/index.html
@@ -133,7 +133,9 @@
                 <div id="board">
                     <img id="ground" src="https://via.placeholder.com/500">
                     <canvas></canvas>
-                    <div id="grid"></div>
+                    <div id="grid">
+                        <div id="movableGhost" class="movable"></div>
+                    </div>
                 </div>
             </div>
             <div id="log"></div>
