update movable images

--- a/web/index.html
+++ b/web/index.html
@@ -108,6 +108,9 @@
                         <span>Default size:
                             <input id="prefabSize" placeholder="Size..." type="number" min="1" value="25">
                         </span>
+                        <button id="prefabSave" class="icon">Save
+                            <i class="fas fa-save"></i>
+                        </button>
                     </div>
                 </div>
                 <div id="selectionProperties" class="controls panel gm">
