--- a/web/index.html
+++ b/web/index.html
@@ -106,7 +106,7 @@
                             <input id="prefabName" type="text">
                         </span>
                         <span>Default size:
-                            <input id="prefabSize" placeholder="Size..." type="number" min="1" value="25">
+                            <input id="prefabSize" placeholder="Size..." type="number" min="1" max="25">
                         </span>
                         <button id="prefabSave" class="icon">Save
                             <i class="fas fa-save"></i>
@@ -115,7 +115,7 @@
                 </div>
                 <div id="selectionProperties" class="controls panel gm">
                     <span>Size:
-                        <input id="movableSize" placeholder="Size..." type="number" min="0" value="25">
+                        <input id="movableSize" placeholder="Size..." type="number" min="0" max="25">
                     </span>
                     <span>Name:
                         <input id="name" type="color" value="#000000">
