movable removal button

--- a/web/index.html
+++ b/web/index.html
@@ -114,6 +114,7 @@
                     <span>Size:
                         <input id="movableSize" placeholder="Size..." type="number" min="0" max="25">
                     </span>
+                    <button id="movableRemove" class="bad">Remove from scene</button>
                 </div>
                 <div id="sceneSelector" class="controls panel gm hooked">
                     <h3>Scene Selector</h3>
