implemented prefab remove button

--- a/web/index.html
+++ b/web/index.html
@@ -108,6 +108,7 @@
                         <span>Default size:
                             <input id="prefabSize" placeholder="Size..." type="number" min="1" max="25">
                         </span>
+                        <button id="prefabRemove" class="bad">Remove from campaign</button>
                     </div>
                 </div>
                 <div id="selectionProperties" class="controls panel gm">
