--- a/web/index.html
+++ b/web/index.html
@@ -106,14 +106,17 @@
                             <input id="prefabName" type="text">
                         </span>
                         <span>Default size:
-                            <input id="prefabSize" placeholder="Size..." type="number" min="1" max="25">
+                            <input id="prefabSize" type="number" min="1" max="25" placeholder="Size...">
                         </span>
                         <button id="prefabRemove" class="bad">Remove from campaign</button>
                     </div>
                 </div>
                 <div id="selectionProperties" class="controls panel gm">
+                    <span class="on-empty">Name:
+                        <input id="movableLabel" type="text" placeholder="Label...">
+                    </span>
                     <span>Size:
-                        <input id="movableSize" placeholder="Size..." type="number" min="0" max="25">
+                        <input id="movableSize" type="number" min="0" max="25" placeholder="Size...">
                     </span>
                     <button id="movableRemove" class="bad compact">Remove from scene</button>
                 </div>
