introduced prefab access

--- a/web/index.html
+++ b/web/index.html
@@ -108,6 +108,8 @@
                         <span>Default size:
                             <input id="prefabSize" type="number" min="1" max="25" placeholder="Size...">
                         </span>
+                        <span id="prefabAccessSpan">Access:</span>
+                        <ul id="prefabAccess"></ul>
                         <button id="prefabRemove" class="bad">Remove from campaign</button>
                     </div>
                 </div>
