better movable creation workflow

--- a/web/index.html
+++ b/web/index.html
@@ -89,11 +89,15 @@
                 </div>
                 <div id="prefabPalette" class="controls panel gm">
                     <h3>Prefab Palette</h3>
-                    <div id="pcPrefabs" class="prefab-container"></div>
-                    <div id="otherPrefabs" class="prefab-container">
-                        <button id="addPrefab" class="icon" title="Add prefab">
-                            <i class="fas fa-plus"></i>
-                        </button>
+                    <div class="prefab-selection">
+                        <p>Players</p>
+                        <div id="pcPrefabs" class="prefab-container"></div>
+                        <p>Others</p>
+                        <div id="otherPrefabs" class="prefab-container">
+                            <button id="addPrefab" class="icon" title="Add prefab">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                        </div>
                     </div>
 
                     <div id="prefabProperties" class="disabled">
