implemented grid transparency

--- a/web/index.html
+++ b/web/index.html
@@ -84,6 +84,9 @@
                         <span>Color:
                             <input id="gridColor" type="color" value="#000000">
                         </span>
+                        <span>Transparency:
+                            <input id="gridAlpha" type="range" min="0" max="1" step="0.01">
+                        </span>
                     </div>
                 </div>
                 <div id="prefabPalette" class="controls panel gm">
