--- a/web/index.html
+++ b/web/index.html
@@ -65,19 +65,22 @@
         </section>
 
         <section id="session">
-            <div id="boardContainer">
-                <div id="playerControls" class="controls">
-                    <button class="icon">
+            <div id="boardContainer" class="edit">
+                <div id="playerControls" class="controls no-edit">
+                    <button class="icon tab" id="diceTab">
                         Roll Dice
                         <i class="fas fa-dice-d20"></i>
-                        <table id="dice"></table>
+                        <table class="content" id="dice"></table>
+                    </button>
+                    <button class="icon" id="editScene">
+                        Edit Scene
+                        <i class="fas fa-wrench"></i>
                     </button>
                 </div>
-                <div id="sceneEditor" class="controls panel gm">
+                <div id="sceneEditor" class="controls panel gm edit-only">
                     <h3>Scene Editor</h3>
                     <button id="changeImage">Change image</button>
-                    <button id="editGrid">Edit grid</button>
-                    <div id="gridControls" class="disabled">
+                    <div id="gridControls">
                         <span>Cell size:
                             <input id="gridSize" placeholder="Cell size in pixels..." type="number" min="8" value="100">
                         </span>
@@ -88,8 +91,12 @@
                             <input id="gridAlpha" type="range" min="0" max="1" step="0.01">
                         </span>
                     </div>
+                    <button class="icon big" id="exitEdit">
+                        Save changes
+                        <i class="fas fa-save"></i>
+                    </button>
                 </div>
-                <div id="prefabPalette" class="controls panel gm">
+                <div id="prefabPalette" class="controls panel gm no-edit">
                     <h3>Prefab Palette</h3>
                     <div class="prefab-selection">
                         <p>Players</p>
@@ -128,7 +135,7 @@
                     </span>
                     <button id="movableRemove" class="bad compact">Remove from scene</button>
                 </div>
-                <div id="sceneSelector" class="controls panel gm hooked">
+                <div id="sceneSelector" class="controls panel gm hooked no-edit">
                     <h3>Scene Selector</h3>
                     <span class="top-hook">
                         <div>
