implemented tile size unit

--- a/web/index.html
+++ b/web/index.html
@@ -85,10 +85,13 @@
                             <input id="gridTiles" placeholder="Total tiles in width..." type="number" min="2"
                                 value="16">
                         </span>
+                        <span title="Used when measuring distances">Tile size unit:
+                            <input id="gridTileUnit">
+                        </span>
                         <span>Grid color:
                             <input id="gridColor" type="color" value="#000000">
                         </span>
-                        <span>Transparency:
+                        <span>Grid Transparency:
                             <input id="gridAlpha" type="range" min="0" max="1" step="0.01">
                         </span>
                     </div>
