only return game id on initial creation

--- a/web/index.html
+++ b/web/index.html
@@ -85,7 +85,7 @@
                             <input id="gridTiles" placeholder="Total tiles in width..." type="number" min="2"
                                 value="16">
                         </span>
-                        <span title="Used when measuring distances">Tile size unit:
+                        <span>Tile size unit:
                             <input id="gridTileUnit">
                         </span>
                         <span>Grid color:
