implemented measuring distance text

--- a/web/index.html
+++ b/web/index.html
@@ -162,6 +162,7 @@
                         <div id="movableGhost" class="movable"></div>
                     </div>
                     <canvas id="distanceCanvas" class="hidden"></canvas>
+                    <span id="distanceText" class="hidden"></span>
                 </div>
             </div>
             <div id="log"></div>
