--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,7 @@
         <section id="session">
             <div id="boardContainer">
                 <div id="playerControls" class="controls no-edit">
-                    <button class="icon gm" id="editScene">
+                    <button class="icon dm" id="editScene">
                         Edit Scene
                         <i class="fas fa-wrench"></i>
                     </button>
@@ -81,7 +81,7 @@
                         <i class="fas fa-ruler"></i>
                     </button>
                 </div>
-                <div id="sceneEditor" class="controls panel gm edit-only">
+                <div id="sceneEditor" class="controls panel dm edit-only">
                     <h3>Scene Editor</h3>
                     <button id="changeImage" class="icon">
                         Change scene image
@@ -107,7 +107,7 @@
                         <i class="fas fa-save"></i>
                     </button>
                 </div>
-                <div id="prefabPalette" class="controls panel gm no-edit no-measure">
+                <div id="prefabPalette" class="controls panel dm no-edit no-measure">
                     <h3>Prefab Palette</h3>
                     <div class="prefab-selection">
                         <p>Players</p>
@@ -137,7 +137,7 @@
                         <button id="prefabRemove" class="bad">Remove from campaign</button>
                     </div>
                 </div>
-                <div id="selectionProperties" class="controls panel gm">
+                <div id="selectionProperties" class="controls panel dm">
                     <span class="on-empty">Name:
                         <input id="movableLabel" type="text" placeholder="Label...">
                     </span>
@@ -146,7 +146,7 @@
                     </span>
                     <button id="movableRemove" class="bad compact">Remove from scene</button>
                 </div>
-                <div id="sceneSelector" class="controls panel gm hooked no-edit no-measure">
+                <div id="sceneSelector" class="controls panel dm hooked no-edit no-measure">
                     <h3>Scene Selector</h3>
                     <span class="top-hook">
                         <div>
