title links to home page

--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,9 @@
 
 <body class="dark-mode">
     <header>
-        <h1>D&D Interactive</h1>
+        <a href="/" class="title">
+            <h1>D&D Interactive</h1>
+        </a>
 
         <span>
             <button id="logOut" class="hidden">Log Out</button>
