introduced in-game map

--- a/web/index.html
+++ b/web/index.html
@@ -169,6 +169,9 @@
                     <canvas id="distanceCanvas" class="hidden"></canvas>
                     <span id="distanceText" class="hidden"></span>
                 </div>
+                <div id="map">
+                    <img src="https://via.placeholder.com/500" draggable="false">
+                </div>
             </div>
             <div id="log"></div>
         </section>
