added map exit button

--- a/web/index.html
+++ b/web/index.html
@@ -171,6 +171,10 @@
                 </div>
                 <div id="map">
                     <img src="https://via.placeholder.com/500" draggable="false">
+                    <button class="icon" type="reset">
+                        Exit map
+                        <i class="fas fa-arrow-left"></i>
+                    </button>
                 </div>
             </div>
             <div id="log"></div>
