multiple maps instead of only one

--- a/web/index.html
+++ b/web/index.html
@@ -170,9 +170,14 @@
                     <span id="distanceText" class="hidden"></span>
                 </div>
                 <div id="map">
-                    <img src="https://via.placeholder.com/500" draggable="false">
+                    <input id="mapName" placeholder="Map name...">
+                    <div id="maps"></div>
+                    <button class="icon" id="changeMap">
+                        Change image
+                        <i class="fas fa-image"></i>
+                    </button>
                     <button class="icon" type="reset">
-                        Exit map
+                        Exit map view
                         <i class="fas fa-arrow-left"></i>
                     </button>
                 </div>
