--- a/web/index.html
+++ b/web/index.html
@@ -170,10 +170,10 @@
                     <span id="distanceText" class="hidden"></span>
                 </div>
                 <div id="map">
-                    <input id="mapName" placeholder="Map name...">
+                    <input id="mapName" placeholder="Map name..." disabled>
                     <div id="maps"></div>
-                    <button class="icon" id="changeMap">
-                        Change image
+                    <button class="icon dm" id="changeMap">
+                        Upload map
                         <i class="fas fa-image"></i>
                     </button>
                     <button class="icon" type="reset">
