--- a/web/index.html
+++ b/web/index.html
@@ -175,6 +175,35 @@
                     <button class="icon dm" id="changeMap">
                         <i class="fas fa-image"></i>
                     </button>
+                    <div id="mapTools">
+                        <div>
+                            <button class="icon" mode="draw">
+                                <i class="fas fa-pen"></i>
+                            </button>
+                            <button class="icon" mode="erase">
+                                <i class="fas fa-eraser"></i>
+                            </button>
+                            <button class="icon dm" mode="text">T</button>
+                            <button class="icon dm" mode="pin">
+                                <i class="fas fa-street-view"></i>
+                            </button>
+                        </div>
+
+                        <div class="dm">
+                            <button class="icon" action="undo">
+                                <i class="fas fa-undo-alt"></i>
+                            </button>
+                            <button class="icon" action="redo">
+                                <i class="fas fa-redo-alt"></i>
+                            </button>
+                            <button class="icon" action="change">
+                                <i class="fas fa-image"></i>
+                            </button>
+                            <button class="icon" action="clear">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </div>
+                    </div>
                     <button class="icon" type="reset">
                         Exit map view
                         <i class="fas fa-arrow-left"></i>
