map action buttons

--- a/web/index.html
+++ b/web/index.html
@@ -175,7 +175,7 @@
                     <button class="icon dm" id="changeMap">
                         <i class="fas fa-image"></i>
                     </button>
-                    <div id="mapTools">
+                    <div id="mapTools" class="hidden">
                         <div>
                             <button class="icon" mode="draw">
                                 <i class="fas fa-pen"></i>
@@ -189,18 +189,21 @@
                             </button>
                         </div>
 
-                        <div class="dm">
+                        <div>
                             <button class="icon" action="undo">
                                 <i class="fas fa-undo-alt"></i>
                             </button>
                             <button class="icon" action="redo">
                                 <i class="fas fa-redo-alt"></i>
                             </button>
+                        </div>
+
+                        <div class="dm">
                             <button class="icon" action="change">
                                 <i class="fas fa-image"></i>
                             </button>
                             <button class="icon" action="clear">
-                                <i class="fas fa-trash"></i>
+                                <i class="fas fa-tint-slash"></i>
                             </button>
                         </div>
                     </div>
