implemented map name change

--- a/web/index.html
+++ b/web/index.html
@@ -170,7 +170,12 @@
                     <span id="distanceText" class="hidden"></span>
                 </div>
                 <div id="map">
-                    <input id="mapName" placeholder="Map name..." disabled>
+                    <span>
+                        <input id="mapName" placeholder="Map name..." disabled>
+                        <button class="icon dm hidden">
+                            <i class="fas fa-check"></i>
+                        </button>
+                    </span>
                     <div id="maps"></div>
                     <button class="icon dm" id="changeMap">
                         <i class="fas fa-image"></i>
