added map navigate and add buttons

--- a/web/index.html
+++ b/web/index.html
@@ -171,9 +171,15 @@
                 </div>
                 <div id="map">
                     <span>
+                        <button class="icon navigate">
+                            <i class="fas fa-chevron-left"></i>
+                        </button>
                         <input id="mapName" placeholder="Map name..." disabled>
                         <button class="icon dm hidden">
                             <i class="fas fa-check"></i>
+                        </button>
+                        <button class="icon navigate">
+                            <i class="fas fa-chevron-right"></i>
                         </button>
                     </span>
                     <div id="maps"></div>
