--- a/web/index.html
+++ b/web/index.html
@@ -183,10 +183,7 @@
                         </button>
                     </span>
                     <div id="maps"></div>
-                    <button class="icon dm" id="changeMap">
-                        <i class="fas fa-image"></i>
-                    </button>
-                    <div id="mapTools" class="hidden">
+                    <div id="mapTools" class="needs-map hidden">
                         <div>
                             <button class="icon" mode="draw">
                                 <i class="fas fa-pen"></i>
@@ -221,6 +218,13 @@
                     <button class="icon" type="reset">
                         Exit map view
                         <i class="fas fa-arrow-left"></i>
+                    </button>
+                    <button class="icon dm needs-map hidden" id="mapDelete" title="Remove this map">
+                        <i class="fas fa-trash"></i>
+                    </button>
+                    <button class="icon dm" id="changeMap">
+                        Create map
+                        <i class="fas fa-image"></i>
                     </button>
                 </div>
             </div>
