added tooltips to map tools

--- a/web/index.html
+++ b/web/index.html
@@ -187,31 +187,41 @@
                         <div>
                             <button class="icon" mode="draw">
                                 <i class="fas fa-pen"></i>
+                                <span>Draw</span>
                             </button>
                             <button class="icon" mode="erase">
                                 <i class="fas fa-eraser"></i>
+                                <span>Erase</span>
                             </button>
-                            <button class="icon dm" mode="text">T</button>
+                            <button class="icon dm" mode="text">
+                                T
+                                <span>Text</span>
+                            </button>
                             <button class="icon dm" mode="pin">
                                 <i class="fas fa-street-view"></i>
+                                <span>Player pin</span>
                             </button>
                         </div>
 
                         <div>
                             <button class="icon" action="undo">
                                 <i class="fas fa-undo-alt"></i>
+                                <span>Undo</span>
                             </button>
                             <button class="icon" action="redo">
                                 <i class="fas fa-redo-alt"></i>
+                                <span>Redo</span>
                             </button>
                         </div>
 
                         <div class="dm">
                             <button class="icon" action="change">
                                 <i class="fas fa-image"></i>
+                                <span>Change image</span>
                             </button>
                             <button class="icon" action="clear">
                                 <i class="fas fa-tint-slash"></i>
+                                <span>Clear map</span>
                             </button>
                         </div>
                     </div>
