added tooltip for map add button

--- a/web/index.html
+++ b/web/index.html
@@ -178,8 +178,9 @@
                         <button class="icon dm hidden">
                             <i class="fas fa-check"></i>
                         </button>
-                        <button class="icon navigate">
+                        <button class="icon navigate with-tooltip">
                             <i class="fas fa-chevron-right"></i>
+                            <span>Create new map</span>
                         </button>
                     </span>
                     <div id="maps"></div>
