made tool info collapsible

--- a/web/index.html
+++ b/web/index.html
@@ -226,11 +226,12 @@
                             </button>
                         </div>
 
-                        <span id="toolInfo" class="hidden">
-                            Player pin.<br>
-                            Click anywhere on the map to visualize where the players are.<br>
-                            Press <i>Delete</i> or <i>Backspace</i> to hide the pin.
-                        </span>
+                        <span id="toolInfo" title="Click to collapse info"></span>
+
+                        <button class="icon" id="infoShow">
+                            <i class="fas fa-info-circle"></i>
+                            <span>Show tool info</span>
+                        </button>
                     </div>
                     <button class="icon" type="reset">
                         Exit map view
