--- a/web/index.html
+++ b/web/index.html
@@ -148,6 +148,7 @@
                     <span>Size:
                         <input id="movableSize" type="number" min="0" max="25" placeholder="Size...">
                     </span>
+                    <div id="conds"></div>
                     <button id="movableRemove" class="bad compact">Remove from scene</button>
                 </div>
                 <div id="sceneSelector" class="controls panel dm hooked no-edit no-measure">
