clear conditions button

--- a/web/index.html
+++ b/web/index.html
@@ -148,6 +148,10 @@
                     <span>Size:
                         <input id="movableSize" type="number" min="0" max="25" placeholder="Size...">
                     </span>
+                    <span class="space-between">
+                        Conditions
+                        <a>Clear all</a>
+                    </span>
                     <div id="conds"></div>
                     <button id="movableRemove" class="bad compact">Remove from scene</button>
                 </div>
