--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
 
                 <p>
                     An account gives you the possibility to create and lead your own campaigns.
-                    <br>It's not needed for joining games!
+                    <br>It's <u>not required</u> for joining games!
                 </p>
 
                 <form action="javascript:void(0);" class="panel">
@@ -61,6 +61,15 @@
                     <button id="create" class="big acc-enable smooth" disabled>Create new campaign</button>
                 </div>
             </div>
+
+            <footer>
+                <a href="https://github.com/doodlezucc/dnd_interactive" target="_blank" rel="noopener noreferrer">
+                    Source Code
+                </a>
+                <a href="https://github.com/doodlezucc/dnd_interactive" target="_blank" rel="noopener noreferrer">
+                    Privacy Policy
+                </a>
+            </footer>
         </section>
 
         <section id="session">
