introduced an icon

--- a/mail/reset.html
+++ b/mail/reset.html
@@ -7,9 +7,8 @@
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" style="padding: 20px;"
                             bgcolor="#ffffff">
                             <tr>
-                                <td align="center" style="padding: 8px 0;">
-                                    Fun fact: Here would be <b>the</b> best place for an icon. Shame I didn't make one
-                                    yet.
+                                <td align="center" style="padding-top: 16px;">
+                                    <img alt="D&D Interactive" src="cid:logo">
                                 </td>
                             </tr>
                             <tr>
