--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" type="image/png" sizes="128x128" href="sass/icon.png">
     <title>D&D Interactive</title>
     <script defer src="main.dart.js"></script>
     <script src="https://kit.fontawesome.com/a3de05bb60.js" crossorigin="anonymous"></script>
@@ -15,6 +16,7 @@
 <body class="dark-mode">
     <header>
         <a href="/" class="title">
+            <div><img src="sass/icon.png"></div>
             <h1>D&D Interactive</h1>
         </a>
 
