added dark overlay behind panels

--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
     <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" type="image/png" sizes="128x128" href="sass/icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="sass/icon32.png">
     <title>D&D Interactive</title>
     <script defer src="main.dart.js"></script>
     <script src="https://kit.fontawesome.com/a3de05bb60.js" crossorigin="anonymous"></script>
