introduced color picker in map tab

--- a/web/index.html
+++ b/web/index.html
@@ -251,6 +251,8 @@
                             <i class="fas fa-question-circle"></i>
                             <span>Show tool info</span>
                         </button>
+
+                        <input type="color" id="activeColor">
                     </div>
                     <button class="icon" type="reset">
                         Exit map view
