introduced new game creation UX

--- a/web/index.html
+++ b/web/index.html
@@ -309,6 +309,18 @@
                 <button id="addChar" class="big">New Character</button>
             </div>
 
+            <div class="on-prepare">
+                <h3>Starting Scene</h3>
+                <p>
+                    Scenes are usually used in combat, as they allow you and your players to navigate their pins on a
+                    grid.
+                </p>
+                <div id="startingScene" class="edit-img">
+                    <div>Upload image</div>
+                    <img>
+                </div>
+            </div>
+
             <button id="delete" class="bad">Delete Campaign</button>
 
             <button id="save">Save</button>
